fixed balances api

--- a/example.html
+++ b/example.html
@@ -78,6 +78,7 @@
       $('#btn_trust').click(trust)
       $('#btn_scan').click(scan)
       $('#btn_share').click(share)
+      $('#btn_balances').click(balances)
 
       //获取当前账户信息
       function load(){
