--- a/example.html
+++ b/example.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta content="yes" name="apple-mobile-web-app-capable">
+  <meta content="yes" name="apple-touch-fullscreen">
+  <meta content="telephone=no,email=no" name="format-detection">
+  <meta name="viewport" content="width=device-width, height=device-height, viewport-fit=cover, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>萤火钱包dapp示例1</title>
+  <title>萤火钱包DApp示例</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css" crossorigin="anonymous" />
   <script src="https://cdn.bootcss.com/vConsole/3.2.0/vconsole.min.js"></script>
   <style>
     .loading{
@@ -60,6 +64,17 @@
   
 </head>
 <body>
+    <section class="section">
+      <div class="container">
+        <h1 class="title">
+          Hello World
+        </h1>
+        <p class="subtitle">
+          My first website with <strong>Bulma</strong>!
+        </p>
+      </div>
+    </section>
+
   <div id="props">
     版本号 window.FFW.version:<span id="prop-version"></span><br/>
     运行平台 window.FFW.platform:<span id="prop-platform"></span><br/>
