--- a/index.html
+++ b/index.html
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>FireFly Wallet DApp Demo</title>
-    <style>
-        *,
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=favicon.ico><title>FireFly Wallet DApp Demo</title><style>*,
         *::before,
         *::after {
             box-sizing: border-box;
@@ -127,16 +117,4 @@
             overflow: auto;
             resize: vertical;
             font-size: 0.36rem;
-        }
-    </style>
-</head>
-
-<body>
-    <noscript>
-      <strong>We're sorry but firefly_dapp_demo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-</body>
-
-</html>
+        }</style><link href=css/app.db9b218b.css rel=preload as=style><link href=css/chunk-vendors.ccd5758f.css rel=preload as=style><link href=js/app.d7e98515.js rel=preload as=script><link href=js/chunk-vendors.4ee1200c.js rel=preload as=script><link href=css/chunk-vendors.ccd5758f.css rel=stylesheet><link href=css/app.db9b218b.css rel=stylesheet></head><body><noscript><strong>We're sorry but firefly_dapp_demo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=js/chunk-vendors.4ee1200c.js></script><script src=js/app.d7e98515.js></script></body></html>
